# project_activities

./: .gitignore  CMakeLists.txt  main.cpp
02/: CMakeLists.txt
03/: CMakeLists.txt  main.cpp
labs/computer_graphics/01/: main.cpp
labs/computer_graphics/02/: main.cpp
labs/computer_graphics/03/: main.cpp
labs/interactive/01/: main.cpp
labs/interactive/02/: main.cpp
labs/interactive/03/: main.cpp
labs/interactive/04/: main.cpp
labs/interactive/05/: main.cpp
labs/lesson_3/3_03/: main.cpp
labs/lesson_4/4_01/: CMakeLists.txt  main.cpp
labs/lesson_4/4_02/: main.cpp
labs/lesson_4/4_03/: CMakeLists.txt  main.cpp
labs/lesson_4/4_06/: CMakeLists.txt
labs/lesson_5/5_01/: main.cpp
lesson_3/3_01/: CMakeLists.txt  main.cpp
lesson_3/3_02/: CMakeLists.txt  main.cpp
lesson_3/3_03/: CMakeLists.txt
lesson_4/4_02/: CMakeLists.txt
lesson_4/4_04/: CMakeLists.txt  main.cpp
lesson_4/4_05/: CMakeLists.txt  main.cpp
lesson_4/4_06/: main.cpp
lesson_5/5_01/: CMakeLists.txt
src/: Player.cpp  Player.h  map.h
temp/: main.cpp
temp/src/: Player.cpp  Player.h
